première version du cv

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</div>
 				<div class="apropos">
 					<h2> A propos de moi</h2>
-					<p>Bonjour je m'appelle quentin féau et je suis actuellement télépilote de drone mais je fais une formation sur openclassrooms pour devenir développeur web </p>
+					<p>Bien décidé à faire évoluer mes compétences dans les nouvelles technologies et l'informatique, je cherche à me professionnaliser dans le développement WEB grâce à une formation diplomante avec OpenClassrooms et différents projets que celle ci propose.</p>
 				</div>
 				<div class="loisirs">
 					<h2>Loisirs</h2>
