--- a/index.html
+++ b/index.html
@@ -10,23 +10,33 @@
 		<section id="cv">
 			<section id="colonnegauche">
 				<img src="images/quentin féau-mini.jpg" alt="photo de quentin féau"/>
-				<div class="contact">
+				<article class="contact">
 					<h2>Contact</h2>
-					<p><em>Féau Quentin</em><br/>5 rue Louis Breguet<br/>79000 NIORT<br/>FRANCE<br/><strong>25ans, Permis B<br/>06.20.10.32.04<br/><a href="mailto:quentin.feau@gmail.com">quentin.feau@gmail.com</a></strong></p>
-				</div>
-				<div class="apropos">
+                    <div class="coordonnees">
+					    <p><em>Féau Quentin</em></p>
+                        <adress><a href="https://www.google.fr/maps/place/3+Rue+Louis+Breguet,+79000+Niort/@46.326524,-0.43324,19.75z/data=!4m5!3m4!1s0x48073055bd758799:0x32ab69cb0c3bb5d6!8m2!3d46.3264229!4d-0.4333855"><strong>Adresse:</strong> 5 rue Louis Breguet,79000 NIORT, FRANCE</a></adress>
+                        <p><strong>25ans, Permis B</strong></p>
+                        <phone><a href="tel:+33620103204"><strong>Téléphone:</strong> 06.20.10.32.04</a></phone>
+                        <email><a href="mailto:quentin.feau@gmail.com"><strong>E-mail:</strong> quentin.feau@gmail.com</a></email>
+                        <web><a href="http://www.rt-drone.com"><strong>Site web:</strong> www.rt-drone.com</a></web>
+                    </div>
+				</article>
+				<article class="apropos">
 					<h2> A propos de moi</h2>
 					<p>Bien décidé à faire évoluer mes compétences dans les nouvelles technologies et l'informatique, je cherche à me professionnaliser dans le développement WEB grâce à une formation diplomante avec OpenClassrooms et différents projets que celle ci propose.</p>
-				</div>
+				</article>
 				<div class="loisirs">
-					<h2>Loisirs</h2>
-                    <p><i class="fas fa-running fa-3x"></i><i class="fas fa-plane fa-3x"></i><i class="fas fa-desktop fa-3x"></i></p>
-					
+					<h2>Loisirs</h2> 
+                    <div class="logos">
+                        <div id="cercle"><i class="fas fa-running fa-3x"></i></div>
+                        <div id="cercle"><i class="fas fa-plane fa-3x"></i></div>
+                        <div id="cercle"><i class="fas fa-desktop fa-3x"></i></div>
+                    </div>
 				</div>
 			</section>
 			<section id="colonnedroite">
 				<div class="titre">
-					<h1>Développeur WEB<br/><em>Féau Quentin</em></h1>
+                    <h1><strong>Féau</strong> Quentin<br/><em>Développeur WEB</em></h1>
 				</div>
 				<div class="formation">
 					<h2><i class="fas fa-school"></i> Formation</h2>
