--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css"/>
 		<title>CV Féau Quentin</title>
+        <meta name="description" content="CV Quentin Féau HTML CSS">
+        <meta name="keywords" content="HTML,CSS">
+        <meta name="author" content="Quentin Féau">
         <script src="https://kit.fontawesome.com/29d0c15e9b.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
 	</head>
 	<body>
 		<section id="cv">
@@ -13,9 +17,9 @@
 				<article class="contact">
 					<h2>Contact</h2>
                     <div class="coordonnees">
-					    <p><em>Féau Quentin</em></p>
+					    <p>Féau Quentin</p>
+                        <p>25ans, Permis B</p>
                         <adress><a href="https://www.google.fr/maps/place/3+Rue+Louis+Breguet,+79000+Niort/@46.326524,-0.43324,19.75z/data=!4m5!3m4!1s0x48073055bd758799:0x32ab69cb0c3bb5d6!8m2!3d46.3264229!4d-0.4333855"><strong>Adresse:</strong> 5 rue Louis Breguet,79000 NIORT, FRANCE</a></adress>
-                        <p><strong>25ans, Permis B</strong></p>
                         <phone><a href="tel:+33620103204"><strong>Téléphone:</strong> 06.20.10.32.04</a></phone>
                         <email><a href="mailto:quentin.feau@gmail.com"><strong>E-mail:</strong> quentin.feau@gmail.com</a></email>
                         <web><a href="http://www.rt-drone.com"><strong>Site web:</strong> www.rt-drone.com</a></web>
@@ -25,20 +29,20 @@
 					<h2> A propos de moi</h2>
 					<p>Bien décidé à faire évoluer mes compétences dans les nouvelles technologies et l'informatique, je cherche à me professionnaliser dans le développement WEB grâce à une formation diplomante avec OpenClassrooms et différents projets que celle ci propose.</p>
 				</article>
-				<div class="loisirs">
+				<article class="loisirs">
 					<h2>Loisirs</h2> 
                     <div class="logos">
                         <div id="cercle"><i class="fas fa-running fa-3x"></i></div>
                         <div id="cercle"><i class="fas fa-plane fa-3x"></i></div>
                         <div id="cercle"><i class="fas fa-desktop fa-3x"></i></div>
                     </div>
-				</div>
+				</article>
 			</section>
 			<section id="colonnedroite">
 				<div class="titre">
                     <h1><strong>Féau</strong> Quentin<br/><em>Développeur WEB</em></h1>
 				</div>
-				<div class="formation">
+				<article class="formation">
 					<h2><i class="fas fa-school"></i> Formation</h2>
 					<div class="conteneurformation">
 						<div class="mars2020">
@@ -60,8 +64,8 @@
 							<p><strong>Lycée Gabriel Touchard, BAC et BTS</strong><br/>1ère, therminale et BTS Electrotechnique</p>
                             </div>	
                     </div>
-				</div>
-				<div class="exppro">
+				</article>
+				<article class="exppro">
 					<h2><i class="fas fa-suitcase"></i> Experiences professionnelles</h2>
 					<div class="conteneurexppro">
 						<div class="sept2020">
@@ -82,8 +86,8 @@
 							<p><strong>Senvion</strong><br/>Stage pour le BZEE en tant que technicien de maintenance en parc éolien.</p>
                             </div>
 					</div>
-				</div>
-				<div class="diplomes">
+				</article>
+				<article class="diplomes">
 					<h2><i class="fas fa-graduation-cap"></i> Diplomes</h2>
 					<div class="conteneurdiplomes">
 						<div class="nov2018">
@@ -104,7 +108,7 @@
                             <p>Baccalauréat STI électrotechnique et BTS électrotechnique</p>
                         </div>
                     </div>
-                </div>
+                </article>
 			</section>
 		</section>
     </body>
