Mise en place du header
création d'un header avec H1 H3 et H4 pour nom prénom et job partie standard et responsive

--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@
 				</article>
 			</section>
 			<section id="colonnedroite">
-				<div class="titre">
-                    <h1><strong>Féau</strong> Quentin<br/><em>Développeur WEB</em></h1>
-				</div>
+				<header class="titre">
+                    <div class="nomprenom">
+                        <h3>Féau</h3>
+                        <h4>Quentin</h4>
+                    </div>
+                    <h1><em>Développeur</em> WEB</h1>
+				</header>
 				<article class="formation">
 					<h2><i class="fas fa-school"></i> Formation</h2>
 					<div class="conteneurformation">
