--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <meta name="description" content="CV Quentin Féau HTML CSS">
         <meta name="keywords" content="HTML,CSS">
         <meta name="author" content="Quentin Féau">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@QuentinFDEV">
+        <meta name="twitter:title" content="CV Féau Quentin">
+        <meta name="twitter:description" content="CV de Quentin Féau Développeur WEB">
+        <meta name="twitter:creator" content="@QuentinFDEV">
+        <meta name="twitter:image" content="https://urlz.fr/coS5">
+        <meta property="og:title" content="CV Féau Quentin" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://quentinfdev.github.io/CV_Feau_Quentin/" />
+        <meta property="og:image" content="https://urlz.fr/coS5" />
+        <meta property="og:description" content="CV de quentin féau développeur WEB" /> 
         <script src="https://kit.fontawesome.com/29d0c15e9b.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, user-scalable=no">
 	</head>
@@ -19,9 +30,9 @@
                     <div class="coordonnees">
 					    <p>Féau Quentin</p>
                         <p>25ans, Permis B</p>
-                        <adress><a href="https://www.google.fr/maps/place/3+Rue+Louis+Breguet,+79000+Niort/@46.326524,-0.43324,19.75z/data=!4m5!3m4!1s0x48073055bd758799:0x32ab69cb0c3bb5d6!8m2!3d46.3264229!4d-0.4333855"><strong>Adresse:</strong> 5 rue Louis Breguet,79000 NIORT, FRANCE</a></adress>
-                        <phone><a href="tel:+33620103204"><strong>Téléphone:</strong> 06.20.10.32.04</a></phone>
-                        <email><a href="mailto:quentin.feau@gmail.com"><strong>E-mail:</strong> quentin.feau@gmail.com</a></email>
+                        <adress><a href="https://www.google.fr/maps/place/79000+Niort/@46.3274304,-0.4963253,13z/data=!3m1!4b1!4m5!3m4!1s0x4807303211d686f5:0x405d39260e82ac0!8m2!3d46.323716!4d-0.464777"><strong>Adresse:</strong> NIORT, FRANCE</a></adress>
+                        <phone><a href="tel:+33620103204"><strong>Téléphone:</strong> 06.69.26.34.92</a></phone>
+                        <email><a href="mailto:quentin.feau@gmail.com"><strong>E-mail:</strong> quentin.feau@rt-drone.com</a></email>
                         <web><a href="http://www.rt-drone.com"><strong>Site web:</strong> www.rt-drone.com</a></web>
                     </div>
 				</article>
