--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css"/>
-        <title>CV Féau Quentin pour OC</title>
+        <title>CV Féau Quentin</title>
         <meta name="description" content="CV de Quentin Féau format Web">
         <meta name="keywords" content="HTML,CSS">
         <meta name="author" content="Quentin Féau">
