--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2>Contact</h2>
                     <div class="coordonnees">
                         <p>Féau Quentin</p>
-                        <p>25ans, Permis B</p>
+                        <p>26ans, Permis B</p>
                         <address><a href="https://www.google.fr/maps/place/79000+Niort/@46.3274304,-0.4963253,13z/data=!3m1!4b1!4m5!3m4!1s0x4807303211d686f5:0x405d39260e82ac0!8m2!3d46.323716!4d-0.464777"><strong>Adresse:</strong> NIORT, FRANCE</a></address>
                         <h5><a href="tel:+33620103204"><strong>Téléphone:</strong> 06.69.26.34.92</a></h5>
                         <h5><a href="mailto:quentin.feau@gmail.com"><strong>E-mail:</strong> quentin.feau@rt-drone.com</a></h5>
@@ -42,7 +42,7 @@
                 </article>
                 <article class="apropos">
                     <h2> A propos de moi</h2>
-                    <p>Electrotechnicien de formation et télépilote de drone depuis 2018, je cherche constamment à évolué dans ce métier, spécialiste de l'inspection j'ai acquis des compétences en photogrammétrie et thermographie pour satisfaire au besoins des clients et depuis peu formateur.</p>
+                    <p>Electrotechnicien de formation et télépilote de drone depuis 2018, je cherche constamment à évolué dans ce métier, spécialiste dans l'inspection j'ai acquis des compétences en photogrammétrie et thermographie pour répondre aux besoins des clients, je suis, de plus formateur depuis Novembre 2020.</p>
                 </article>
                 <article class="loisirs">
                     <h2>Loisirs</h2> 
